# AlphaFlow-MT5-ML-DL-Trading-Lab

./: .gitignore  LICENSE  README.md  dashboard.py  pyproject.toml  requirements.txt
backtests/: simple_backtest.py  vectorbt_backtest.py
data/: data_loader.py
features/: feature_engineering.py  labeling_schemes.py
live_trading/: double_barrier.py  multi_bar.py  regime_detection.py  regression_returns.py
models/: model_training.py
models/dl_models/: AAPL.NAS_GRU_best_model.keras  AMZN.NAS_LSTM_best_model.keras  DIS.NYSE_LSTM_best_model.keras  EURUSD_LSTM_best_model.keras  GBPUSD_GRU_best_model.keras  GOOG.NAS_MLP_best_model.keras  MSFT.NAS_MLP_best_model.keras  NVDA.NAS_Transformer_best_model.keras  TSLA.NAS_CNN_best_model.keras  USDJPY_Transformer_best_model.keras
models/saved_models/: best_lstm_fixed.h5  best_lstm_model.h5  best_lstm_optuna.h5  best_rf_db_pipeline.pkl  best_rf_mb_pipeline.pkl  best_rf_pipeline.pkl  best_rf_rd_pipeline.pkl  best_timeseries_lstm_model.h5  lstm_scaler.pkl  minmax_scaler.pkl
notebooks/dl/: 00_eda_visualization.ipynb  01_backtests_regression_returns dl.ipynb  02_time_series_arima_sarima_var_lstmprice.ipynb
notebooks/eda/: 00_eda_visualization.ipynb
notebooks/exploratory/: integrated_pipeline_pair_trading.ipynb
notebooks/ml/: 01_backtests_regression_returns.ipynb  01_live_trading_regression_returns.ipynb  02_backtests_multi_bar_classification.ipynb  03_backtests_double_barrier_labeling.ipynb  03_live_trading_double_barrier_labeling.ipynb  04_backtests_regime_detection.ipynb  2_live_trading_multi_bar_classification.ipynb
(+668 files in other folders)
