[project]
name = "alphaflow-trading-lab"
version = "0.1.0"
description = "AlphaFlow ML & DL Trading Bot is an end-to-end machine learning and deep learning trading framework for MetaTrader 5. It covers data loading, feature engineering, model training/tuning, backtesting with vectorbt, and live deployment—all in one repository."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "lightgbm==4.6.0",
    "matplotlib>=3.10.6",
    "matplotlib-inline>=0.1.7",
    "metatrader5>=5.0.4874 ; sys_platform == 'win32'",
    "nbformat>=5.10.4",
    "numpy>=1.23.5",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "plotly>=5.24.1",
    "psutil>=7.1.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "streamlit-autorefresh>=1.0.1",
    "ta>=0.11.0",
    "ta-lib>=0.6.7",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "tensorflow>=2.20.0",
    "tensorflow-intel>=0.0.1",
    "tensorflow-io-gcs-filesystem<=0.31.0",
    "vectorbt<=0.28.0",
    "xgboost==2.1.4",
]
